--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "react-native-swipeview",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "SwipeView component for React Native.",
   "main": "index.js",
   "scripts": {
-    "start": "react-native start"
+    "start": "react-native start",
+    "compile": "./node_modules/.bin/babel -d lib/ src/",
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,12 @@
   "homepage": "https://github.com/rishabhbhatia/react-native-swipeview#readme",
   "dependencies": {
     "prop-types": "^15.5.10"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1"
   }
 }
